Fix alignment for extra-promo and footer for catalog page on mobile

--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -1,6 +1,6 @@
 .extra {
   padding-top: 15px;
-  padding-bottom: 30px;
+  padding-bottom: 34px;
 }
 
 .extra__wrapper {
@@ -77,8 +77,13 @@
   margin-top: 39px;
   padding-top: 20px;
   padding-right: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
   padding-left: 20px;
+  background-color: $primary-color;
+  background-image: url("../../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   &::before {
     content: "";
